sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/DomainProcessBinding__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is responsible for controlling the dependency injection of domain criteria and actions.</description>
    <label>Domain Process Binding</label>
    <pluralLabel>Domain Process Bindings</pluralLabel>
</CustomObject>