sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/ClassToInject__c.field-meta.xml
<CustomField>
    <fullName>ClassToInject__c</fullName>
    <description>This is the Apex class that will be injected into the process execution.  If the domain process type is &quot;Criteria&quot;, then the class has to implement mmlib_ICriteria or mmlib_ICriteriaWithExistingRecords.  If the domain process type is &quot;Action&quot;, then the class has to implement mmlib_IAction.</description>
    <inlineHelpText>This is the Apex class that will be injected into the process execution.</inlineHelpText>
    <label>Class To Inject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>