sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/DomainMethodToken__c.field-meta.xml
<CustomField>
    <fullName>DomainMethodToken__c</fullName>
    <description>In a process context of Domain Method Execution, you will need to provide a Domain Method Token -- some unique string that will be supplied to the dependency injection process from the domain class method.</description>
    <inlineHelpText>In a process context of Domain Method Execution, you will need to provide a Domain Method Token -- some unique string that will be supplied to the dependency injection process from the domain class method.</inlineHelpText>
    <label>Domain Method Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>