sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/OrderOfExecution__c.field-meta.xml
<CustomField>
    <fullName>OrderOfExecution__c</fullName>
    <description>Within a process context and &quot;trigger operation&quot;/&quot;domain method token&quot;, you will have one or more criteria and one or more actions.  This allows you to specify what the execution order is.  If more than one sequence of criteria and actions are required, then designate this by using decimal numbers.  i.e. 1.1-criteria, 1.2-critera, 1.3-action, 2.1-criteria, 2.2-action</description>
    <inlineHelpText>Within a process context and &quot;trigger operation&quot;/&quot;domain method token&quot;, you will have one or more criteria and one or more actions.  This allows you to specify what the execution order is.</inlineHelpText>
    <label>Order Of Execution</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>