sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/ProcessContext__c.field-meta.xml
<CustomField>
    <fullName>ProcessContext__c</fullName>
    <description>Represents what type of process will be initiating the execution of the criteria and actions.</description>
    <inlineHelpText>Represents what type of process will be initiating the execution of the criteria and actions.</inlineHelpText>
    <label>Process Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DomainMethodExecution</fullName>
                <label>Domain Method Execution</label>
            </value>
            <value>
                <fullName>TriggerExecution</fullName>
                <default>true</default>
                <label>Trigger Execution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>