sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/RelatedDomainBindingSObjectAlternate__c.field-meta.xml
<CustomField>
    <fullName>RelatedDomainBindingSObjectAlternate__c</fullName>
    <description>Use this field to specify the SObject API name to bind to when the &quot;Related Domain Binding SObject&quot; field does not list that particular SObject.  Only specify the &quot;Related Domain Binding SObject&quot; field or this one; not both.</description>
    <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Related Domain Binding SObject&quot; field does not list that particular SObject.  Only specify the &quot;Related Domain Binding SObject&quot; field or this one; not both.</inlineHelpText>
    <label>Related Domain Binding SObject Alternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>