sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Domain processes are composed of criteria and actions -- which type is this entry??</description>
    <inlineHelpText>Domain processes are composed of criteria and actions -- which type is this entry??</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>