sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/validationRules/DomainMethodTokenValidOnlyOnProcessDME.validationRule-meta.xml
<ValidationRule>
    <fullName>DomainMethodTokenValidOnlyOnProcessDME</fullName>
    <active>true</active>
    <description>DomainMethodToken__c can only be populated for ProcessContext__c = &quot;DomainMethodExecution&quot;</description>
    <errorConditionFormula>not( isblank( DomainMethodToken__c ) ) &amp;&amp; text( ProcessContext__c  ) != &quot;DomainMethodExecution&quot;</errorConditionFormula>
    <errorDisplayField>DomainMethodToken__c</errorDisplayField>
    <errorMessage>The &quot;Domain Method Token&quot; should only be populated when the process context is &quot;Domain Method Execution&quot;</errorMessage>
</ValidationRule>