sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/validationRules/ExecuteAsynchronousValidOnlyOnTypeAction.validationRule-meta.xml
<ValidationRule>
    <fullName>ExecuteAsynchronousValidOnlyOnTypeAction</fullName>
    <active>true</active>
    <description>ExecuteAsynchronous__c can only be active for Type__c = &quot;Action&quot;</description>
    <errorConditionFormula>TEXT(Type__c) != &quot;Action&quot; &amp;&amp;  ExecuteAsynchronous__c</errorConditionFormula>
    <errorDisplayField>ExecuteAsynchronous__c</errorDisplayField>
    <errorMessage>&quot;Execute Asynchronous&quot; can only be true when Type is &quot;Action&quot;</errorMessage>
</ValidationRule>