sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/validationRules/LogicalInverseValidOnlyOnTypeCriteria.validationRule-meta.xml
<ValidationRule>
    <fullName>LogicalInverseValidOnlyOnTypeCriteria</fullName>
    <active>true</active>
    <description>The LogicalInverse__c field is only valid when the type is Criteria.</description>
    <errorConditionFormula>TEXT(Type__c) != &quot;Criteria&quot; &amp;&amp; LogicalInverse__c</errorConditionFormula>
    <errorDisplayField>LogicalInverse__c</errorDisplayField>
    <errorMessage>&quot;Logical Inverse&quot; can only be true when Type is &quot;Criteria&quot;</errorMessage>
</ValidationRule>