sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/validationRules/Minimal_BindObj_Or_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimal_BindObj_Or_BindObjAlt</fullName>
    <active>true</active>
    <description>This validation rule ensures that at least the &quot;Related Domain Binding SObject&quot; or the &quot;Related Domain Binding SObject Alternate&quot; field is specified.</description>
    <errorConditionFormula>ISBLANK( RelatedDomainBindingSObject__c ) &amp;&amp; ISBLANK(  RelatedDomainBindingSObjectAlternate__c )</errorConditionFormula>
    <errorMessage>Either the &quot;Related Domain Binding SObject&quot; field or the &quot;Related Domain Binding SObject Alternate&quot; field must be specified.</errorMessage>
</ValidationRule>