sfdx-source/core/main/schema/objects/DomainProcessBinding__mdt/validationRules/PreventRecursiveValidOnlyOnProcessTE.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventRecursiveValidOnlyOnProcessTE</fullName>
    <active>true</active>
    <description>PreventRecursive__c can only be active for ProcessContext__c = &quot;TriggerExecution&quot;</description>
    <errorConditionFormula>PreventRecursive__c &amp;&amp; text( ProcessContext__c ) != &quot;TriggerExecution&quot;</errorConditionFormula>
    <errorDisplayField>PreventRecursive__c</errorDisplayField>
    <errorMessage>&quot;Prevent Recursive&quot; is only valid when the process context is &quot;Trigger Execution&quot;</errorMessage>
</ValidationRule>